# usaon-benefit-tool

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  README.md  VERSION.env  VERSION.latest.env  alembic.ini  compose.dev.yml  compose.prod.yml  compose.yml  conda-lock.yml  docker-compose.dev.yml  docker-compose.nonprod-postgres.yml  docker-compose.prod.yml  docker-compose.yml  environment-lock.yml  environment.yml  pyproject.toml  setup.py  ~
.circleci/: config.yml
.github/workflows/: pr-rtd-link.yml  release.yml  test.yml
deploy/: deploy
deploy/post/: v2.1.0  v2.2.0  v2.3.0  v2.4.0  v2.7.0
doc/: TODO.md  _quarto.yml  contributing.md  db.md  development.md  envvars.md  index.md
doc/how-to/: db.md  development.md  operation.md  release.md
doc/notes/: TODO.md
doc/reference/: data_model.md  envvars.md  glossary.md  third-party-service-dependencies.md
doc/reference/decision-records/: 000-decision-records-template  000-decision-records-template.md  (+5 more)
doc/tutorial/: edit-app-markdown.md  index.md
haproxy/: haproxy.cfg
migrations/: env.py
migrations/versions/: 3d10329f791c_remove_empty_assessment_node_subtype_.py  4e1467a2b7a3_simplify_application_fields.py  925ed377e31b_add_new_link_fields.py  b9357b81d2b0_add_new_sba_related_fields.py  ce8e6e308e5c_remove_prefilled_sba_reference_tables.py  d46c4d798847_remove_sba_foreign_key_relationship.py  ea1181510e10_allow_null_for_link_ratings.py  fafa3da67d5e_increase_length_of_description_columns.py
scripts/: gunicorn.sh  invoke_in_container.sh
tasks/: __init__.py  db.py  env.py  format.py  test.py  util.py
tests/: conftest.py  test_logged_in.py  test_logged_out.py  test_version.py
usaon_benefit_tool/: __init__.py  _types.py  forms.py
usaon_benefit_tool/constants/: colormap.py  rbac.py  repo.py  sankey.py  sba.py  status.py  templating.py
usaon_benefit_tool/models/: tables.py
usaon_benefit_tool/routes/: admin.py  assessments.py  colorbar.py  google.py  legend.py  login.py  logout.py  node.py  nodes.py  projects.py  root.py  support.py  survey.py  surveys.py  user.py  users.py
usaon_benefit_tool/static/: style.css
usaon_benefit_tool/templates/: 403.html  404.html  assessments.html  base.html  faqs.html  faqs.md  glossary.html  glossary.md  home.html  home.md  login.html  new_survey.html  node.html  nodes.html  profile.html  projects.html  rating_rubric.html  rating_rubric.md  survey.html  surveys.html  user_guide.html  user_guide.md  users.html  what_is_benefit_assessment.html  what_is_benefit_assessment.md
usaon_benefit_tool/util/: authorization.py  colormap.py  datetime.py  dev.py  envvar.py  flask_jsglue.py  full_sankey.py  node_type.py  rbac.py  sankey.py  superform.py
usaon_vta_survey/: __init__.py  _types.py  forms.py  google.py  model.py
usaon_vta_survey/constants/: db.py  paths.py  rbac.py  roles.py  sba.py  status.py
usaon_vta_survey/models/: tables.py
usaon_vta_survey/routes/: __init__.py  google.py  home.py  login.py  logout.py  profile.py  root.py  survey.py  surveys.py  user.py  users.py
usaon_vta_survey/static/: style.css
usaon_vta_survey/templates/: base.html  base_response.html  error.html  home.html  login.html  new_profile.html  new_survey.html  profile.html  response.html  response_applications.html  response_data_products.html  response_observing_systems.html  survey.html  surveys.html  users.html
usaon_vta_survey/util/: authorization.py  dev.py  envvar.py  full_sankey.py  sankey.py  superform.py
(+124 files in other folders)
